--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Dan christian Villaco NISU CICS</title>
-        <meta name="keywords" content="NISU, CICS, Dan christian Villaco, Personal Portfolio, Northern Iloilo State University, College of Information and Computing Studies, Programmer,  web development, back-end, php, mysql"/>
-        <meta name="description" content="NISU | CICS | Dan christian Villaco | Programmer | Personal Portfolio | Northern Iloilo State University | College of Information and Computing Studies"/>
+         <title>About Dan Christian Villaco - NISU CICS</title>
+    <meta name="keywords" content="NISU, CICS, Dan Christian Villaco, Personal Portfolio, About Me, Programmer, web development, back-end, php, mysql"/>
+    <meta name="description" content="Learn more about Dan Christian Villaco, a programmer and student at Northern Iloilo State University,NISU, College of Information and Computing Studies, CICS."/>
+
         <meta name="author" content="Dan christian Villaco"/>
       
         <meta name="robots" content="index, follow" />
