--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
         <meta name="robots" content="index, follow" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      
+      <meta name="google-site-verification" content="LcNKecyZcfeqb0t4dhf7IwmdCr3NnJ-zCCjpPmgPKBU" />
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
