--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                                         <p class="text-dark mb-0">Dan Christian Villaco</p>
                                     </div>
                                     <div class="d-flex">
-                                        <a class="btn btn-primary btn-sm-square me-3" href="https://web.facebook.com/dan.villaco2"><i class="fab fa-facebook-f text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-3" href="https://github.com/dashboard"><i class="fab fa-github text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-3" href="https://www.instagram.com/chrisdanvillaco/"><i class="fab fa-instagram text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-0" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://web.facebook.com/dan.villaco2" aria-label="facebook"><i class="fab fa-facebook-f text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://github.com/dashboard"  aria-label="github"><i class="fab fa-github text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://www.instagram.com/chrisdanvillaco/"  aria-label="IG"><i class="fab fa-instagram text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-0" href="https://www.linkedin.com/feed/"  aria-label="linkedin"><i class="fab fa-linkedin-in text-white"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -470,10 +470,10 @@
                             <div class="row g-4 align-items-center">
                                 <div class="col-12 text-center">
                                     <div class="d-flex justify-content-center">
-                                        <a class="btn btn-primary btn-sm-square me-3" href="https://web.facebook.com/dan.villaco2"><i class="fab fa-facebook-f text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-3" href="https://github.com/dashboard"><i class="fab fa-github text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-3" href="https://www.instagram.com/chrisdanvillaco/"><i class="fab fa-instagram text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-0" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in text-white"></i></a>
+                                       <a class="btn btn-primary btn-sm-square me-3" href="https://web.facebook.com/dan.villaco2" aria-label="facebook"><i class="fab fa-facebook-f text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://github.com/dashboard"  aria-label="github"><i class="fab fa-github text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://www.instagram.com/chrisdanvillaco/"  aria-label="IG"><i class="fab fa-instagram text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-0" href="https://www.linkedin.com/feed/"  aria-label="linkedin"><i class="fab fa-linkedin-in text-white"></i></a>
                                     </div>
                                 </div>
                                 <div class="col-12 text-center">
