--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <h1 class="display-6 text-white mb-0">Portfolio</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title"> Hello I'm Dan Christian Villaco</p>
+                                <p class="text-white sub-title"> Hello, I'm Dan Christian Villaco</p>
                                 <h1 class="display-6 text-white mb-0">BSIT Student <br> NISU West Campus</h1>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
                                     <h1 class="display-6 mb-4">Web Developer</h1>
-                                    <p class="mb-4">Hi, i'm Dan. A Student of Northern Iloilo State Univeristy, College of information Computing Studies. 
+                                    <p class="mb-4">Hi, I'm Dan. A Student of Northern Iloilo State Univeristy, College of information Computing Studies. 
                                       <br><br>  <a href="about.html">Read more....</a>
                                     </p>
                                 
