--- a/index.html
+++ b/index.html
@@ -510,6 +510,45 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Dan Christian Villaco",
+  "jobTitle": "Programmer",
+  "url": "https://danvillaco.site",
+  "sameAs": [
+    "https://www.linkedin.com/in/danchristianvillaco"
+  ],
+  "alumniOf": {
+    "@type": "EducationalOrganization",
+    "name": "Northern Iloilo State University",
+    "url": "https://www.nisu.edu.ph",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Estancia, Iloilo",
+      "addressLocality": "Iloilo City",
+      "addressRegion": "Iloilo",
+      "postalCode": "5017",
+      "addressCountry": "PH"
+    },
+    "department": {
+      "@type": "EducationalOrganization",
+      "name": "College of Information in Computing Studies",
+      "url": "https://www.nisu.edu.ph/cics",  // Update this URL if necessary
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Estancia, Iloilo",
+        "addressLocality": "Iloilo City",
+        "addressRegion": "Iloilo",
+        "postalCode": "5017",
+        "addressCountry": "PH"
+      }
+    }
+  }
+}
+</script>
     </body>
 
 </html>
