--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
                                     <h1 class="display-6 mb-4">Web Developer</h1>
-                                    <p class="mb-4">Hi, I'm Dan. A Student of Northern Iloilo State Univeristy, College of information Computing Studies. 
+                                    <p class="mb-4">Hi, I'm Dan. A Student of <a href="https://www.nisu.edu.ph/">Northern Iloilo State Univeristy</a>, <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">College of information Computing Studies</a>. 
                                       <br><br>  <a href="about.html">Read more....</a>
                                     </p>
                                 
