--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Dan Christian Villaco - NISU CICS</title>
-    <meta name="keywords" content="NISU, CICS, Dan Christian Villaco, Personal Portfolio, Northern Iloilo State University, College of Information and Computing Studies, Programmer, web development, back-end, php, mysql"/>
+    <meta name="keywords" content="NISU, CICS, NISU CICS, Northern Iloilo State University, College of Information and Computing Studies, Programmer, web development, back-end, php, mysql, Dan Christian Villaco, Personal Portfolio,"/>
     <meta name="description" content="NISU | CICS | Dan Christian Villaco | Programmer | Personal Portfolio | Northern Iloilo State University | College of Information and Computing Studies"/>
         <meta name="author" content="Dan christian Villaco"/>
       
