--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
       
         <meta name="robots" content="index, follow" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
+         <link rel="canonical" href="https://danvillaco.site/about.html" />
       
 
         <!-- Google Web Fonts -->
