--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="NISU, CICS, NISU CICS, Northern Iloilo State University, College of Information and Computing Studies, Programmer, web development, back-end, php, mysql, Dan Christian Villaco, Personal Portfolio,"/>
     <meta name="description" content="NISU | CICS | Dan Christian Villaco | Programmer | Personal Portfolio | Northern Iloilo State University | College of Information and Computing Studies"/>
         <meta name="author" content="Dan christian Villaco"/>
-      
+               <link rel="canonical" href="https://danvillaco.site/index.html" />
         <meta name="robots" content="index, follow" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <meta name="google-site-verification" content="LcNKecyZcfeqb0t4dhf7IwmdCr3NnJ-zCCjpPmgPKBU" />
