--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
                                     <h1 class="display-6 mb-4">Web Developer</h1>
-                                    <p class="mb-4">Hi, I'm <b>Dan</b>. A Student of  <a href="https://www.nisu.edu.ph/"><b>Northern Iloilo State Univeristy</b></a>, <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies"><b>College of information Computing Studies</b></a>..who pursue as a Web developer that esponsible for the site's technical aspects, such as its performance and capacity, which are measures of a website's speed and how much traffic the site can handle.
+                                    <p class="mb-4">Hi, I'm <b>Dan</b>. A Student of  <a href="https://www.nisu.edu.ph/"><b>Northern Iloilo State Univeristy</b></a>, <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies"><b>College of information Computing Studies</b></a>..who pursue as a Web developer that responsible for the site's technical aspects, such as its performance and capacity, which are measures of a website's speed and how much traffic the site can handle.
                                        <br><br> I'm a passionate web developer and programmer with a keen eye for detail and a love for crafting elegant, user-friendly digital solutions. With a strong foundation in HTML, CSS, and JavaScript, I specialize in building dynamic and responsive websites.
                                        <br><br>
                                        <b>I'm proficient in a range of programming languages and frameworks, including:</b> 
