--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta name="google-site-verification" content="LcNKecyZcfeqb0t4dhf7IwmdCr3NnJ-zCCjpPmgPKBU" />
 
         <title>Dan Christian Villaco - NISU CICS</title>
         <meta name="author" content="Dan christian Villaco"/>
@@ -111,7 +112,7 @@
         <!-- Navbar End -->
 
         <!-- Header Start -->
-        <div class="container-fluid" id="pigraHome">
+        <div class="container-fluid" id="pigraHome" itemscope itemtype="https://schema.org/EducationalOrganization">
             <div class="container">
                 <div class="row g-0">
                     <div class="col-12 col-lg-3">
@@ -133,13 +134,17 @@
                                         <img src="img/dan.jpg" class="img-fluid w-100" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;" alt="Image">
                                     </div>
                                 </div>
-                                <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
+                                <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s" itemprop="description">
                                     <h1 class="display-6 mb-4">Web Developer</h1>
                                     <p class="mb-4">Hi, I'm Dan. A Student of  <a href="https://www.nisu.edu.ph/">Northern Iloilo State Univeristy</a>, <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">College of information Computing Studies.
                                       <br><br>  <a href="about.html">Read more....</a>
                                     </p>
-                                
-                                  
+                                    <br>
+                                    <h3><a href="https://www.nisu.edu.ph/" itemprop="url"><strong>Northern Iloilo State University (NISU)</strong></a></h3>
+                                    <p itemprop="department"><strong>* College of Information and Computing Studies (CICS)</strong></p>
+                                    <p itemprop="educationalProgram">* Bachelor of Science in Information Technology (BSIT)</p>
+                                    <p itemprop="description">* Focusing on Web and Application Development</p>
+                                  <br>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fas fa-map-marker-alt text-primary me-3"></i>
                                         <p class="text-dark mb-0">Brgy. Casanayan, Pilar, Capiz</p>
