--- a/cics.html
+++ b/cics.html
@@ -150,7 +150,7 @@
                                             </div>
                                             <div class="col-xl-4">
                                                 <ol>
-                                                    <li>Bachelor of Science in Computer Science<br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
+                                                    <li><strong>Bachelor of Science in Computer Science</strong><br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
                                                 </ol><br>
                                             </div>  
                                         </div>
@@ -166,9 +166,9 @@
                                             </div>
                                             <div class="col-xl-4">
                                                 <ol>
-                                                    <li>BACHELOR OF LIBRARY AND INFORMATION SCIENCE<br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
-                                                    <li>BACHELOR OF SCIENCE IN COMPUTER SCIENCE<br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
-                                                    <li>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY<br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
+                                                    <li><strong>BACHELOR OF LIBRARY AND INFORMATION SCIENCE</strong><br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
+                                                    <li><strong>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</strong><br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
+                                                    <li><strong>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY</strong><br> <a href="https://www.nisu.edu.ph/index.php/academics/college-of-information-and-computing-studies">Read More...</a></li>
                                                 </ol><br>
                                             </div>
                                     </div>
