--- a/nisu.html
+++ b/nisu.html
@@ -82,7 +82,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
-                                    <h1 class="display-6 mb-4">Norther Iloilo State University</h1>
+                                    <h1 class="display-6 mb-4">Northern Iloilo State University</h1>
                                     <p class="mb-4"><a href="https://www.nisu.edu.ph/">Norther Iloilo State University (NISU)</a> is a state university in the 
                                         Philippines located in Western Visayas at the province of Iloilo. It is mandated to provide higher and advanced education and training in the fields of<b> education, 
                                             industrial technology, criminology, agriculture, fishery, hospitality management, engineering, sciences and information technology</b>. It is also mandated to promote research, 
