--- a/nisu.html
+++ b/nisu.html
@@ -64,7 +64,7 @@
                     <div class="col-12 col-lg-3">
                         <div class="header-content bg-dark h-100 pt-6 pe-6 pb-6">
                             <a href="index.html" class="navbar-brand d-inline-flex pb-5 wow fadeInUp" data-wow-delay="0.1s">
-                                <h1 class="display-6 text-white mb-0"><a href="https://www.nisu.edu.ph/">Norther Iloilo State University</a></h1>
+                                <h1 class="display-6 text-white mb-0"><a href="https://www.nisu.edu.ph/">Northern Iloilo State University</a></h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
                                 <br>
