--- a/nisu.html
+++ b/nisu.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <title>NISU - Northern Iloilo State University</title>
+        <title>NISU - Northern Iloilo State University- Dan Christian Villaco</title>
 
         <meta name="keywords" content="Northern Iloilo State University (NISU), NISU, Iloilo education, state university, higher education, academic programs, research university, Administration, Dan Christian B. Villaco"/>
         <meta name="description" content="Northern Iloilo State University (NISU) is a state university in the Philippines located in Western Visayas at the province of Iloilo. It is mandated to provide higher and advanced education and training in the fields of education, industrial technology, criminology, agriculture, fishery, hospitality management, engineering, sciences and information technology."/>
