--- a/nisu.html
+++ b/nisu.html
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
                                     <h1 class="display-6 mb-4">Northern Iloilo State University</h1>
-                                    <p class="mb-4"><a href="https://www.nisu.edu.ph/">Norther Iloilo State University (NISU)</a> is a state university in the 
+                                    <p class="mb-4"><a href="https://www.nisu.edu.ph/">Northern Iloilo State University (NISU)</a> is a state university in the 
                                         Philippines located in Western Visayas at the province of Iloilo. It is mandated to provide higher and advanced education and training in the fields of<b> education, 
                                             industrial technology, criminology, agriculture, fishery, hospitality management, engineering, sciences and information technology</b>. It is also mandated to promote research, 
                                         advanced studies, and progressive leadership in various fields. Its main campus is located in Estancia, Iloilo, Philippines.Prior to its present conversion 
@@ -129,7 +129,7 @@
                                                 <a href="https://www.nisu.edu.ph/index.php?view=article&id=74:ncaa-nisu-coed-collaborate-in-launching-book-lemlunay&catid=9:news-and-events" class="h4 mb-0"><u>NCAA, NISU CoEd collaborate in launching book Lemlunay</u></a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0">NCAA,<a href="https://www.nisu.edu.ph/index.php?view=article&id=74:ncaa-nisu-coed-collaborate-in-launching-book-lemlunay&catid=9:news-and-events">Norther Iloilo State University (NISU)</a> CoEd collaborate in launching book Lemlunay In collaboration with the National Commission for Culture and the Arts (NCAA) and Northern...
+                                                <p class="mb-0">NCAA,<a href="https://www.nisu.edu.ph/index.php?view=article&id=74:ncaa-nisu-coed-collaborate-in-launching-book-lemlunay&catid=9:news-and-events">Northern Iloilo State University (NISU)</a> CoEd collaborate in launching book Lemlunay In collaboration with the National Commission for Culture and the Arts (NCAA) and Northern...
                                                 </p>
                                             </div>
                                           
@@ -162,7 +162,7 @@
                                                 <a href="https://www.nisu.edu.ph/index.php?view=article&id=72:nisu-collaborates-with-filpas-and-seemesol-expanding-digital-transformation-and-career-opportunities-for-graduates&catid=9:news-and-events" class="h4 mb-0"><u>NISU collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates</u></a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=72:nisu-collaborates-with-filpas-and-seemesol-expanding-digital-transformation-and-career-opportunities-for-graduates&catid=9:news-and-events">Norther Iloilo State University (NISU)</a> collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates Northern Iloilo State University...
+                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=72:nisu-collaborates-with-filpas-and-seemesol-expanding-digital-transformation-and-career-opportunities-for-graduates&catid=9:news-and-events">Northern Iloilo State University (NISU)</a> collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates Northern Iloilo State University...
                                                 </p>
                                             </div>
                                     </div>
@@ -177,7 +177,7 @@
                                                 <a href="https://www.nisu.edu.ph/index.php?view=article&id=71:lin-ay-sang-iloilo24-graces-presidents-office-in-a-courtesy-call-2&catid=9:news-and-events" class="h4 mb-0"><u>NISU continues to open tracks for the Intercampus Sports Meet 2024, fosters a spirit of camaraderie</u></a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=71:lin-ay-sang-iloilo24-graces-presidents-office-in-a-courtesy-call-2&catid=9:news-and-events">Norther Iloilo State University (NISU)</a> collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates Northern Iloilo State University...
+                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=71:lin-ay-sang-iloilo24-graces-presidents-office-in-a-courtesy-call-2&catid=9:news-and-events">Northenr Iloilo State University (NISU)</a> collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates Northern Iloilo State University...
                                                 </p>
                                             </div>
                                     </div>
