--- a/nisu.html
+++ b/nisu.html
@@ -146,7 +146,7 @@
                                                 <a href="https://www.nisu.edu.ph/index.php?view=article&id=73:nisu-collaborates-with-filpas-and-seemesol-expanding-digital-transformation-and-career-opportunities-for-graduates-2&catid=9:news-and-events" class="h4 mb-0"><u>NISU takes part in Estancia's 106th founding anniversary</u></a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=73:nisu-collaborates-with-filpas-and-seemesol-expanding-digital-transformation-and-career-opportunities-for-graduates-2&catid=9:news-and-events">Norther Iloilo State University (NISU)</a> takes part in Estancia's 106th founding anniversary Northern Iloilo State University (NISU)—Main Campus showed support to the 106th Founding...
+                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=73:nisu-collaborates-with-filpas-and-seemesol-expanding-digital-transformation-and-career-opportunities-for-graduates-2&catid=9:news-and-events">Northern Iloilo State University (NISU)</a> takes part in Estancia's 106th founding anniversary Northern Iloilo State University (NISU)—Main Campus showed support to the 106th Founding...
                                                 </p>
                                             </div>
                                             
@@ -177,7 +177,7 @@
                                                 <a href="https://www.nisu.edu.ph/index.php?view=article&id=71:lin-ay-sang-iloilo24-graces-presidents-office-in-a-courtesy-call-2&catid=9:news-and-events" class="h4 mb-0"><u>NISU continues to open tracks for the Intercampus Sports Meet 2024, fosters a spirit of camaraderie</u></a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=71:lin-ay-sang-iloilo24-graces-presidents-office-in-a-courtesy-call-2&catid=9:news-and-events">Northenr Iloilo State University (NISU)</a> collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates Northern Iloilo State University...
+                                                <p class="mb-0"><a href="https://www.nisu.edu.ph/index.php?view=article&id=71:lin-ay-sang-iloilo24-graces-presidents-office-in-a-courtesy-call-2&catid=9:news-and-events">Northern Iloilo State University (NISU)</a> collaborates with FilPas and SeeMeSol; Expanding digital transformation and career opportunities for graduates Northern Iloilo State University...
                                                 </p>
                                             </div>
                                     </div>
