--- a/cics.html
+++ b/cics.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <title>CICS - College of information and Computing Studies</title>
+        <title>CICS - College of Information and Computing Studies</title>
 
         <meta name="keywords" content="CICS, College of information and Computing Studies, NISU,Dan Christian B. Villaco"/>
         <meta name="description" content="The CICS endeavors to: train students skills to become computer professionals knowledgeable and collaboration in the IT World"/>
