--- a/cics.html
+++ b/cics.html
@@ -6,7 +6,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <title>CICS - College of Information and Computing Studies</title>
 
-        <meta name="keywords" content="CICS, College of information and Computing Studies (CICS), NISU,Dan Christian B. Villaco"/>
+        <meta name="keywords" content="CICS, College of information and Computing Studies (CICS), College of  information and computer science (NISU),NISU,Dan Christian B. Villaco"/>
         <meta name="description" content="The CICS endeavors to: train students skills to become computer professionals knowledgeable and collaboration in the IT World"/>
        
         <meta name="author" content="Dan christian Villaco"/>
