--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 "@type": "Person",
                 "name": "Dan Christian B. Villaco",
                 "url": "https://danvillaco.site",
-                "image": "https://johnpaulbantillo.site/img/profile.jpg",
+                "image": "https://danvillaco.site/img/dan.jpg",
                 "jobTitle": "Web and Application Developer",
                 "description": "BSIT student at Northern Iloilo State University (NISU) College of Information and Computing Studies (CICS)",
                 "worksFor": {
