--- a/nisu.html
+++ b/nisu.html
@@ -109,6 +109,37 @@
                     <div class="col-lg-9">
                         <div class="service-content h-100 pt-6 ps-6 pb-6">
                             <div class="row g-4">
+                                 <div class="col-12">
+                                    <div class="service-item p-4 wow fadeInUp" data-wow-delay="0.1s">
+                                        <div class="row g-4 align-items-center">
+                                            <div class="col-xl-2">
+                                            </div>
+                                            <div class="col-xl-3">
+                                                <a href="https://www.nisu.edu.ph/index.php?view=article&id=77:rscuaa24-opens-six-days-of-sporting-events-in-a-vibrant-opening-ceremony&catid=9:news-and-events" class="h4 mb-0"><u>RSCUAA'24 opens six days of sporting events in a vibrant opening ceremony</u></a>
+                                            </div>
+                                            <div class="col-xl-4">
+                                                <p class="mb-0"> <a href="https://www.nisu.edu.ph/index.php?view=article&id=77:rscuaa24-opens-six-days-of-sporting-events-in-a-vibrant-opening-ceremony&catid=9:news-and-events">RSCUAA'24</a> opens six days of sporting events in a vibrant opening ceremony BAROTAC NUEVO, Iloilo—The Regional State Colleges and Universities...
+                                                </p>
+                                            </div>
+                                          
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="service-item p-4 wow fadeInUp" data-wow-delay="0.1s">
+                                        <div class="row g-4 align-items-center">
+                                            <div class="col-xl-2">
+                                            </div>
+                                            <div class="col-xl-3">
+                                                <a href="https://www.nisu.edu.ph/index.php?view=article&id=76:champions-from-the-north-blue-marlin-vie-for-rscuaa24-placement&catid=9:news-and-events" class="h4 mb-0"><u>Champions from the North: Blue Marlin vie for RSCUAA'24 Placement</u></a>
+                                            </div>
+                                            <div class="col-xl-4">
+                                                <p class="mb-0"> <a href="https://www.nisu.edu.ph/index.php?view=article&id=76:champions-from-the-north-blue-marlin-vie-for-rscuaa24-placement&catid=9:news-and-events">RSCUAA'24</a> Champions from the North: Blue Marlin vie for RSCUAA'24 Placement As the Regional State Colleges and Universities Athletic Association (RSCUAA)...
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-12">
                                     <div class="service-item p-4 wow fadeInUp" data-wow-delay="0.1s">
                                         <div class="row g-4 align-items-center">
